Fixing movie table spacing

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -221,19 +221,51 @@ nav {
 
 /******************* MOVIE TABLE *******************/
 .movie-list__container {
-    display: flex;
-    flex-flow: row;
-    align-items: center;
-    flex-wrap: wrap;
+    /* display: flex;
+    flex-flow: row wrap;
+    align-content: flex-start;
     list-style: none;
-    background-color: blue;
+    background-color: blue; */
+
+    display: flex;
+    display: -webkit-flex;
+    display: -moz-flex;
+    flex-flow: row wrap;
+    -webkit-flex-flow: row wrap;
+    -moz-flex-flow: row wrap;
 }
 
 .movie-table__item {
     padding: 0;
-    margin: 10px;
+    margin: 0;
     box-sizing: border-box;
+
+    display: flex;
+    display: -webkit-flex;
+    display: -moz-flex;
+    justify-content: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    /* flex-basis: 25%; */
 }
+
+@media (max-width: 360px) {
+    .container .item {
+      flex-basis: 100%;
+    }
+  }
+  
+  @media (min-width:360px) and (max-width: 520px) {
+    .container .item {
+      flex-basis: 50%;
+    }
+  }
+  
+  @media (min-width:520px) and (max-width: 680px) {
+    .container .item {
+      flex-basis: 33.33%;
+    }
+  }
 
 /**********************************************************/
 
